--- a/src/client/lazy-app/Compress/Table/style.css
+++ b/src/client/lazy-app/Compress/Table/style.css
@@ -15,13 +15,12 @@
 .table {
   position: relative;
   padding: 24px;
-  width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 132px);
   z-index: 10;
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
-  align-items: center;
+  align-content: center;
   justify-content: center;
   overflow: scroll;
 }
